Upgrade to Java 25.
Signed-off-by: Stéphane Galland <galland@arakhne.org>