@@ -5,7 +5,7 @@
  * Copyright (c) 2000-2012 Stephane GALLAND.
  * Copyright (c) 2005-10, Multiagent Team, Laboratoire Systemes et Transports,
  *                        Universite de Technologie de Belfort-Montbeliard.
- * Copyright (c) 2013-2023 The original authors and other contributors.
+ * Copyright (c) 2013-2026 The original authors and other contributors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,6 +23,7 @@ package org.arakhne.afc.inputoutput.path;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import org.arakhne.afc.vmutil.FileSystem;
@@ -77,9 +78,9 @@ public class SimplePathBuilder implements PathBuilder {
 			this.currentURL = null;
 		} else {
 			try {
-				this.currentURL = new URL(currentDirectory);
+				this.currentURL = new URI(currentDirectory).toURL();
 				this.currentFile = null;
-			} catch (MalformedURLException exception) {
+			} catch (Throwable exception) {
 				this.currentFile = new File(currentDirectory);
 				this.currentURL = null;
 			}
